--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <script>
+        <title>Document</title>
+</head >
 
-<body>
-    <form>
-        <input type="text" placeholder="Ingrese el nombre del producto" />
-        <input type="number" placeholder="Ingrese el precio" />
-        <input type="text" name="" id="">
-        <textarea placeholder="Ingrese una descripción" />
+            <body>
+                <form>
+                    <input type="text" placeholder="Ingrese el nombre del producto" />
+                    <input type="number" placeholder="Ingrese el precio" />
+                    <input type="text" name="" id="">
+                        <textarea placeholder="Ingrese una descripción" />
     </form>
 </body>
 
