--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,12 +9,28 @@
 </head>
 
 <body>
-    <form>
-        <input type="text" placeholder="Ingrese el nombre del producto" />
-        <input type="number" placeholder="Ingrese el precio" />
-        <input type="text" name="" id="">
-        <textarea placeholder="Ingrese una descripción" />
-    </form>
+    <Header>
+        <h1>TP 4 FIZZMOD</h1>
+    </Header>
+    <section>
+        <form>
+            <div>
+                <input type="text" placeholder="Ingrese el nombre del producto" />
+            </div>
+            <div>
+                <input type="number" placeholder="Ingrese el precio" />
+            </div>
+            <div>
+                <input type="text" name="" id="">
+            </div>
+            <div>
+                <textarea placeholder="Ingrese una descripción" />
+            </div>
+        </form>
+    </section>
+    <footer>
+        <p>2021 Pablo Emanuel Chorolque</p>
+    </footer>
 </body>
 
 </html>
