--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -9,28 +9,7 @@
 </head>
 
 <body>
-    <Header>
-        <h1>TP 4 FIZZMOD</h1>
-    </Header>
-    <section>
-        <form>
-            <div>
-                <input type="text" placeholder="Ingrese el nombre del producto" />
-            </div>
-            <div>
-                <input type="number" placeholder="Ingrese el precio" />
-            </div>
-            <div>
-                <input type="text" name="" id="">
-            </div>
-            <div>
-                <textarea placeholder="Ingrese una descripción" />
-            </div>
-        </form>
-    </section>
-    <footer>
-        <p>2021 Pablo Emanuel Chorolque</p>
-    </footer>
+    {{{body}}}
 </body>
 
 </html>
