--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,9 +1,9 @@
-<div class="content-block">
+<div class="content-div1">
     <h2>Listado de productos</h2>
-    <div class="link-group">
+    <div class="link">
         <a href="/">Volver a ingreso de productos</a>
     </div>
-    <div class="content-block">
+    <div class="content-div2">
         {{#if products.length}}
         <table>
             <tr>
@@ -22,7 +22,7 @@
             {{/each}}
         </table>
         {{else}}
-        <p class="ERROR">No hay productos para listar</p>
+        <p class="Error">No hay productos para listar</p>
         {{/if}}
     </div>
 </div>
