--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,17 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="" />
     <title>Listado de Productos</title>
 </head>
 
 <body>
+    <div class="list">
+        {{{body}}}
 
-    {{{body}}}
-
-    <footer>
-        <p>2021 Pablo Emanuel Chorolque</p>
-    </footer>
+        <footer>
+            <p>2021 Pablo Emanuel Chorolque</p>
+        </footer>
+    </div>
 </body>
 
 </html>
