--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="content-div1">
     <h2>Listado de productos</h2>
     <div class="link">
-        <a href="/">Volver a ingreso de productos</a>
+        <a href="/">Volver</a>
     </div>
     <div class="content-div2">
         {{#if products.length}}
